# movie-recommender

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: movies.csv  ratings.csv
data/data/: ratings.csv
src/: collaborative.py  data_loader.py  hybrid.py  preprocessing.py  recommender.py
tests/: test_hybrid.py  test_load.py  test_preprocessing.py  test_recommender.py
