[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movie-recommender"
version = "0.1.0"
description = "A content-based movie recommendation system"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "fastapi",
    "uvicorn",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[project.scripts]
recommend = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-p", "no:cacheprovider"]
pythonpath = ["."]
testpaths = ["tests"]
